# OpenGL-Setup

./: .gitignore  CMakeLists.txt  main.cpp  run.sh  setup.sh
assets/shaders/: triangle.shader
src/: main.cpp
